...
        child: SizedBox(
          height: dimens.tabBarHeight,
          child: Row(
            children: <Widget>[
              Expanded(
                child: _NavigationItem(
                  itemKey: const Key('bottom_nav_watchlist'),
                  label: '관심',
                  icon: Icons.star_border,
                  selectedIcon: Icons.star,
                  isSelected: selectedTab == AppTab.watchlist,
                  onTap: () {
                    onTabSelected(AppTab.watchlist);
                  },
                ),
              ),
              Expanded(
                child: _NavigationItem(
                  itemKey: const Key('bottom_nav_search'),
                  label: '검색',
                  icon: Icons.search,
                  selectedIcon: Icons.search,
                  isSelected: selectedTab == AppTab.search,
                  onTap: () {
                    onTabSelected(AppTab.search);
...
