...
  @override
  Widget build(BuildContext context) {
    final AppColors colors = context.colors;
    final AppDimens dimens = context.dimens;

    return SafeArea(
      key: const Key('search_screen'),
      bottom: false,
      child: Column(
        children: <Widget>[
          Padding(
            padding: EdgeInsets.fromLTRB(
              dimens.space4,
...
              dimens.space4,
              dimens.space3,
            ),
            child: SizedBox(
              height: 40,
              child: TextField(
                key: const Key('stock_search_field'),
                controller: _textEditingController,
                onChanged: _searchController.onQueryChanged,
                onSubmitted: (_) => _searchController.retry(),
                textInputAction: TextInputAction.search,
                style: TextStyle(
                  color: colors.textPrimary,
...
